app/src/main/java/com/example/rentit/core/error/UnprocessableEntityException.kt
package com.example.rentit.core.error

class UnprocessableEntityException(message: String? = null): Exception(message)